--- a/Disclaimer.html
+++ b/Disclaimer.html
@@ -198,56 +198,54 @@ li {
 
     <body>
         <div id="scroll-tracker"></div>
-    <h1>
-       <b>Disclaimer</b>
-    </h1>
-
-<h2><b>Introduction</b></h2>
-
-
-<p><strong>Last Updated: 20-10-2024</strong></p>
-<p>The information provided by BSW (“We,” “Us” or “Our”) on www.bhaskarsah.com.np (the “Website”) is for general informational purposes only. All information on the Website is provided in good faith, however, We make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability or completeness of any information on the Website.</p>
-<p>Under no circumstance shall We have any liability to You for any loss or damage of any kind incurred as a result of the use of the Website or reliance on any information provided on the Website. Your use of the Website and Your reliance on any information on the Website is solely at Your own risk.</p><h2 id="tableofcontents">Contents</h2>
-<p>Click below to jump to any section of this disclaimer</p>
-<ol type="1">
-    <li><a href="#consent"><strong>Consent</strong></a>
+<h1>Disclaimer</h1>
+<p>Last updated: 20-10-2024</p>
+<h2>Interpretation and Definitions</h2>
+<h3>Interpretation</h3>
+<p>The words of which the initial letter is capitalized have meanings defined under the following conditions.
+The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.</p>
+<h3>Definitions</h3>
+<p>For the purposes of this Disclaimer:</p>
+<ul>
+<li><strong>Company</strong> (referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Disclaimer) refers to CyberWise.</li>
+<li><strong>Service</strong> refers to the Website.</li>
+<li><strong>You</strong> means the individual accessing the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.</li>
+<li><strong>Website</strong> refers to CyberWise, accessible from <a href="https://www.bhaskarsah.com.np/" rel="external nofollow noopener" target="_blank">https://www.bhaskarsah.com.np/</a></li>
+</ul>
+<h2>Disclaimer</h2>
+<p>The information contained on the Service is for general information purposes only.</p>
+<p>The Company assumes no responsibility for errors or omissions in the contents of the Service.</p>
+<p>In no event shall the Company be liable for any special, direct, indirect, consequential, or incidental damages or any damages whatsoever, whether in an action of contract, negligence or other tort, arising out of or in connection with the use of the Service or the contents of the Service. The Company reserves the right to make additions, deletions, or modifications to the contents on the Service at any time without prior notice. This Disclaimer has been created with the help of the <a href="https://www.termsfeed.com/disclaimer-generator/" target="_blank">Disclaimer Generator</a>.</p>
+<p>The Company does not warrant that the Service is free of viruses or other harmful components.</p>
+<h2>External Links Disclaimer</h2>
+<p>The Service may contain links to external websites that are not provided or maintained by or in any way affiliated with the Company.</p>
+<p>Please note that the Company does not guarantee the accuracy, relevance, timeliness, or completeness of any information on these external websites.</p>
+<h2>Errors and Omissions Disclaimer</h2>
+<p>The information given by the Service is for general guidance on matters of interest only. Even if the Company takes every precaution to ensure that the content of the Service is both current and accurate, errors can occur. Plus, given the changing nature of laws, rules and regulations, there may be delays, omissions or inaccuracies in the information contained on the Service.</p>
+<p>The Company is not responsible for any errors or omissions, or for the results obtained from the use of this information.</p>
+<h2>Fair Use Disclaimer</h2>
+<p>The Company may use copyrighted material which has not always been specifically authorized by the copyright owner. The Company is making such material available for criticism, comment, news reporting, teaching, scholarship, or research.</p>
+<p>The Company believes this constitutes a &quot;fair use&quot; of any such copyrighted material as provided for in section 107 of the United States Copyright law.</p>
+<p>If You wish to use copyrighted material from the Service for your own purposes that go beyond fair use, You must obtain permission from the copyright owner.</p>
+<h2>Views Expressed Disclaimer</h2>
+<p>The Service may contain views and opinions which are those of the authors and do not necessarily reflect the official policy or position of any other author, agency, organization, employer or company, including the Company.</p>
+<p>Comments published by users are their sole responsibility and the users will take full responsibility, liability and blame for any libel or litigation that results from something written in or as a direct result of something written in a comment. The Company is not liable for any comment published by users and reserves the right to delete any comment for any reason whatsoever.</p>
+<h2>No Responsibility Disclaimer</h2>
+<p>The information on the Service is provided with the understanding that the Company is not herein engaged in rendering legal, accounting, tax, or other professional advice and services. As such, it should not be used as a substitute for consultation with professional accounting, tax, legal or other competent advisers.</p>
+<p>In no event shall the Company or its suppliers be liable for any special, incidental, indirect, or consequential damages whatsoever arising out of or in connection with your access or use or inability to access or use the Service.</p>
+<h2>&quot;Use at Your Own Risk&quot; Disclaimer</h2>
+<p>All information in the Service is provided &quot;as is&quot;, with no guarantee of completeness, accuracy, timeliness or of the results obtained from the use of this information, and without warranty of any kind, express or implied, including, but not limited to warranties of performance, merchantability and fitness for a particular purpose.</p>
+<p>The Company will not be liable to You or anyone else for any decision made or action taken in reliance on the information given by the Service or for any consequential, special or similar damages, even if advised of the possibility of such damages.</p>
+<h2>Contact Us</h2>
+<p>If you have any questions about this Disclaimer, You can contact Us:</p>
+<ul>
+<li>
+<p>By email: bsw554@gmail.com</p>
 </li>
-    <li><a href="#reviews"><strong>Reviews</strong></a>
+<li>
+<p>By visiting this page on our website: <a href="https://www.bhaskarsah.com.np/" rel="external nofollow noopener" target="_blank">https://www.bhaskarsah.com.np/</a></p>
 </li>
-    <li><a href="#earnings"><strong>Earnings Disclaimer</strong></a>
-</li>
-    <li><a href="#fairuse"><strong>Fair Use Notice</strong></a>
-</li>
-    <li><a href="#personal"><strong>Personal Responsibility</strong></a>
-</li>
-    <li><a href="#contact"><strong>Contact Us</strong></a>
-</li>
-    <li><a href="#copyright"><strong>Copyright Information</strong></a>
-</li>
-
-</ol>
-<h2 id="consent">1 Consent</h2><p>By using the Website, You hereby consent to this Disclaimer and agree to its terms.</p>
-<p>We will not be liable for any damages experienced in connection with the use of Our Website.</p>
-<p><strong>If You do not agree with this Disclaimer, STOP now and do not access or use this Website.</strong></p>
-
-<p><a href="#tableofcontents">Back to table of contents</a></p><h2 id="reviews">2 Reviews</h2><p>At various times, We may provide reviews of products, services, or other resources. This may include reviews of books, services, and/or software applications. Any such reviews will represent the good-faith opinions of the author of such review. The products and services reviewed may be provided to Us for free or at a reduced price as an incentive to provide a review.</p>
-<p>Regardless of any such discounts, We will provide honest reviews of these products and/or services. You recognize that You should conduct Your own due diligence and should not rely solely upon any reviews provided on this Website.</p>
-<p>We will disclose the existence of any discounts or incentives received in exchange for providing a review of a product. If You would like more information about any such discounts and incentives, send an email to bsw554@gmail.com that includes the title of the reviewed product as the subject line. We will respond via email and disclose any incentives or discounts We received in association with any such review.</p>
-
-<p><a href="#tableofcontents">Back to table of contents</a></p><h2 id="earnings">3 Earnings Disclaimer</h2><p>From time to time, We may report on the success of one of Our existing or prior clients/customers. The information about this success is accurately portrayed by the clients/customers. You acknowledge that the prior success of others does not guarantee Your success.</p>
-<p>As with any business, Your results may vary and will be based on Your individual capacity, business experience, expertise, and level of desire. There are no guarantees concerning the level of success You may experience. There is no guarantee that You will make any income at all and You accept the risk that the earnings and income statements differ by individual. Each individual's success depends on his or her background, dedication, desire, and motivation.</p>
-<p>The use of Our information, products, and services should be based on Your own due diligence and You agree that We are not liable for any success or failure of Your business that is directly or indirectly related to the purchase and use of Our information, products, and services reviewed or advertised on this Website.</p>
-
-<p><a href="#tableofcontents">Back to table of contents</a></p><h2 id="fairuse">4 Fair Use Notice</h2><p>The Website contains copyrighted material the use of which has not always been specifically authorized by the copyright owner. We believe this constitutes a “fair use” of any such copyrighted material as provided for in section 107 of the US Copyright Law. If You wish to use copyrighted material from the Website for purposes of Your own that go beyond fair use, You must obtain permission from the copyright owner.</p>
-
-<p><a href="#tableofcontents">Back to table of contents</a></p><h2 id="personal">5 Personal Responsibility</h2><p>You acknowledge You are using Our Website voluntarily and that any choices, actions and results now and in the future are solely Your responsibility.</p>
-<p>We will not be liable to You or any other party for any decision made or action taken in reliance on the information given in the Website.</p>
-
-<p><a href="#tableofcontents">Back to table of contents</a></p><h2 id="contact">6 Contact Us</h2><p>If You require any more information or have any questions about Our Website's disclaimer, please feel free to contact Us by our <a href="/contact.html">contact page</a> or  by email at&nbsp;<a href="mailto:bsw554@gmail.com">bsw554@gmail.com</a>.</p>
-
-<div class="footer">
-    <p><a href="#tableofcontents">Back to table of contents</a></p><h2 id="copyright">7 Copyright Information</h2>COPYRIGHT 2024 BHASKAR SAH. ALL RIGHTS RESERVED.
-</div>
+</ul>
 
 <script type="module"></script>
 
