--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
                 <li class="has-dropdown">
                     <a href="#"> Cyber Security <span class="dropdown-arrow">▼</span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Cybersecurity Insights</a></li>
+                        <li><a href="/creditcard.html">About Cybersecurity </a></li>
                         <li><a href="#">Data Privacy</a></li>
                         <li><a href="#">Network Security</a></li>
                         <li><a href="#">Endpoint Security</a></li>
@@ -936,6 +936,7 @@
                 <li class="has-dropdown">
                     <a href="#"> Artificial Intelligence (AI) <span class="dropdown-arrow">▼</span></a>
                     <ul class="dropdown-menu">
+                        <li><a href="/">About Artificial Intelligence (AI) </a></li>
                         <li><a href="#">AI & Machine Learning</a></li>
                         <li><a href="#">Generative AI</a></li>
                         <li><a href="#">AI Ethics</a></li>
@@ -946,6 +947,7 @@
                 <li class="has-dropdown">
                     <a href="#"> Science and Technology <span class="dropdown-arrow">▼</span></a>
                     <ul class="dropdown-menu">
+                        <li><a href="/sci and tech.html">About Science and Technology </a></li>
                         <li><a href="#">Emerging Tech</a></li>
                         <li><a href="#">Innovations</a></li>
                         <li><a href="#">Hardware & Gadgets</a></li>
@@ -956,14 +958,16 @@
                   <li class="has-dropdown">
                     <a href="#"> Dark Web <span class="dropdown-arrow">▼</span></a>
                     <ul class="dropdown-menu">
+                         <li><a href="/Darkweb.html">About Dark Web </a></li>
                         <li><a href="#">Dark Web Explained</a></li>
                         <li><a href="#">Anonymity & Privacy</a></li>
                         <li><a href="#">Hidden Services</a></li>
                     </ul>
                 </li>
                   <li class="has-dropdown">
-                    <a href="#"> IT Related <span class="dropdown-arrow">▼</span></a>
+                    <a href="#"> TI Related <span class="dropdown-arrow">▼</span></a>
                     <ul class="dropdown-menu">
+                         <li><a href="/IT.html">About Information Technology (IT)</a></li>
                         <li><a href="#">IT Management</a></li>
                         <li><a href="#">Cloud Computing</a></li>
                         <li><a href="#">DevOps</a></li>
