--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
                 <li class="has-dropdown">
                     <a href="#"> Cyber Security <span class="dropdown-arrow">▼</span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/creditcard.html">About Cybersecurity </a></li>
+                        <li><a href="/Cyber Security.html">About Cybersecurity </a></li>
                         <li><a href="#">Data Privacy</a></li>
                         <li><a href="#">Network Security</a></li>
                         <li><a href="#">Endpoint Security</a></li>
