--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CyberWise - Your Tech Insights</title>
     <link rel="icon" href="/Logo1 2.png" type="image/icon type">
+
+     <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "CyberWise",
+      "url": "https://www.bhaskarsah.com.np/",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": {
+          "@type": "EntryPoint",
+          "urlTemplate": "https://www.bhaskarsah.com.np/search?q={search_term_string}"
+        },
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+
+    <meta property="og:site_name" content="CyberWise">
+
     <style>
         
         * {
