--- a/index.html
+++ b/index.html
@@ -1090,44 +1090,33 @@
     <footer class="site-footer">
         <div class="footer-main-content container">
             <div class="footer-columns">
-                <div class="footer-column">
-                    <h4>Explore CyberWise</h4>
-                    <ul>
-                        <li><a href="#">Homepage</a></li>
-                        <li><a href="#">Latest Articles</a></li>
-                        <li><a href="#">Popular Topics</a></li>
-                        <li><a href="#">Tech News</a></li>
-                        <li><a href="#">Tutorials</a></li>
-                    </ul>
-                </div>
+                
                 <div class="footer-column">
                     <h4>Key Topics</h4>
                     <ul>
-                        <li><a href="#">Cybersecurity Threats</a></li>
-                        <li><a href="#">AI Ethics</a></li>
-                        <li><a href="#">Software Development Trends</a></li>
-                        <li><a href="#">Gadget Reviews</a></li>
-                        <li><a href="#">Data Privacy</a></li>
+                        <li><a href="#">Cybersecurity </a></li>
+                        <li><a href="#">Artificial Intelligence (AI) </a></li>
+                        <li><a href="#">Science and technology</a></li>
+                        <li><a href="#">Information Technology (IT)</a></li>
+                        <li><a href="#">Dark Web</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h4>Resources</h4>
                     <ul>
-                        <li><a href="#">Glossary</a></li>
-                        <li><a href="#">Webinars</a></li>
-                        <li><a href="#">E-books</a></li>
-                        <li><a href="#">Community Forum</a></li>
-                        <li><a href="#">Newsletter</a></li>
+                        <li><a href="#">Account</a></li>
+                        <li><a href="#">Keys</a></li>
+                        <li><a href="#">Blog </a></li>
+                        <li><a href="/password.html">Password Generator</a></li>
+                        <li><a href="/secure.html">Secure URL Checker</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
-                    <h4>Company</h4>
+                    <h4>CyberWise</h4>
                     <ul>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Our Team</a></li>
-                        <li><a href="#">Contact CyberWise</a></li>
-                        <li><a href="#">Advertise With Us</a></li>
-                        <li><a href="#">Careers</a></li>
+                        <li><a href="/About Me.html">About Me</a></li>
+                        <li><a href="/contact.html">Contact CyberWise</a></li>
+                        <li><a href="#">Home</a></li>
                     </ul>
                 </div>
             </div>
@@ -1147,7 +1136,7 @@
                     </a>
                 </div>
                 <div class="footer-legal">
-                    <p class="footer-copyright">&copy; <span id="currentYear"></span> CyberWise. All Rights Reserved.</p>
+                    <p class="footer-copyright">&copy; 2024 CyberWise. All Rights Reserved.</p>
                     <nav class="footer-legal-links">
                         <a href="/privacy policy.html">Privacy Policy</a>
                         <a href="/Disclaimer.html">Disclaimer</a>
