--- a/sci and tech.html
+++ b/sci and tech.html
@@ -884,11 +884,11 @@ body.dark-mode .main-footer {
 
     <footer class="main-footer">
         <div class="footer-content">
-            <p>&copy; 2025 CyberWise. All rights reserved.</p>
+            <p>&copy; 2024 CyberWise. All rights reserved.</p>
             <ul class="footer-links">
                 <li><a href="/About Me.html">About Author</a></li>
                 <li><a href="/privacy policy.html">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
+                <li><a href="/terms&condition.html">Terms and Condition</a></li>
                 <li><a href="/Disclaimer.html">Disclaimer</a></li>
                 <li><a href="/contact.html">Contact Us</a></li>
             </ul>
