--- a/index.html
+++ b/index.html
@@ -1017,11 +1017,11 @@
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5A6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
                 </svg>
                 <div class="suggestions-dropdown" id="suggestionsDropdown">
-                    <div><a href="/Cyber Security.html" class="btn"></a>Cyber Security</div>
-                    <div>Artificial Intelligence (AI)</div>
-                    <div>Science and Technology</div>
-                    <div>Dark Web</div>
-                    <div>Data Science</div>
+                    <div><a href="/Cyber Security.html" class="btn">Cyber Security</a></div>
+                    <div><a href="">Artificial Intelligence (AI)</a></div>
+                    <div><a href="/sci and tech.html">Science and Technology</a></div>
+                    <div><a href="/Darkweb.html">Dark Web</a></div>
+                    <div><a href="/IT.html">Information Technology (IT)</a></div>
                 </div>
             </div>
         </div>
@@ -1235,10 +1235,10 @@
             const suggestionsDropdown = document.getElementById('suggestionsDropdown');
             const allPossibleSuggestions = [ // More comprehensive list
                 "Cyber Security", 
-                "Protecting Your Privacy Online", 
-                "Latest Smartphone Reviews",
-                "Web Development Basics",
-                 "Cybersecurity for Beginners", 
+                "Artificial Intelligence (AI)", 
+                "Information Tehnology(IT)",
+                "Dark Web",
+                 "Science and Technology", 
                  "Machine Learning Applications",
                 "Cloud Computing Explained", 
                 "IoT Security Risks", 
