--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@
                     <nav class="footer-legal-links">
                         <a href="/privacy policy.html">Privacy Policy</a>
                         <a href="/Disclaimer.html">Disclaimer</a>
-                        <a href="/terms&condition.html">Terms of Service</a>
+                        <a href="/terms&condition.html">Terms and Condition</a>
                         <a href="/contact.html">Contact Us</a>
                     </nav>
                 </div>
