--- a/About Me.html
+++ b/About Me.html
@@ -229,7 +229,7 @@
                 <p class="description text-lg leading-relaxed mb-6">
                    "CyberWise - Your Tech Insights" focuses on making tricky subjects easy to understand. This platform covers <strong>Cybersecurity, Artificial Intelligence, Science & Technology,</strong> and the fascinating parts of the <strong>Dark Web</strong> and <strong>so on..</strong>
                     <br><br>
-                    Articles aim to give readers a clear and practical understand of how to stay safe online and keep up with new developments. They do more than just look into the latest tech breakthroughs. They also strive to share insights that help build a digital community where everyone feels more secure and well-informed.
+                    Articles aim to give readers a clear and practical understand of how to stay safe online and keep up with new developments. We do more than just look into the latest tech breakthroughs. We also strive to share insights that help build a digital community where everyone feels more secure and well-informed.
                 </p>
 
                 <div class="flex flex-wrap justify-center gap-4">
